--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=healthcare
 spring.datasource.url=jdbc:mysql://localhost:3306/health
 spring.datasource.username=root
 spring.datasource.password=
+health.pat=ppf5jvhtl5q2rgk6vf4jirdrkwcmvbcsnq57orv5j3d5h6fef6ta
